--- a/Report/Report.Rmd
+++ b/Report/Report.Rmd
@@ -5,5 +5,5 @@ date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 ---
 
-```{r child = c('intro.Rmd', 'Data.Rmd', 'r1.Rmd', 'pk.Rmd')}
+```{r child = c('intro.Rmd', 'Data.Rmd', 'r1.Rmd', 'r2.Rmd')}
 ```
